--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ section__concentration">
             нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто
             тренирует направленное внимание.</p>
         </div>
+      </div>
     </section>
     <section class="gallery">
       <h4 class="gallery-title title-decor">А можно в картинках?</h4>
