--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body class="page">
   <header class="header decorated-zone">
-    <div class="decor-text">REC</div>
+    <div class="decor-text" aria-hidden="true">REC</div>
     <nav class="header__theme-menu">
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
