--- a/index.html
+++ b/index.html
@@ -50,22 +50,25 @@
   </header>
   <main class="main">
     <section class="section focus__section">
-      <h3 class="section__main-title">Почему сосредоточиться так сложно</h3>
+      <h2 class="section__main-title">Почему сосредоточиться так сложно</h2>
       <div class="section__description section__description-focus">
         <div>
-          <h4 class="section__title title-decor">Многозадачность</h4>
+          <h3 class="section__title title-decor">Многозадачность</h3>
           <p class="section__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
             легендарная многозадачность,
             когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не
             существует.
-            Исследователи <a class="link" href="">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
+            Исследователи <a class="link" href=" https://dana.org/article/multicosts-of-multitasking/"
+              target="_blank">выяснили</a>, что
+            мозгу тяжело
+            концентрироваться даже на двух делах
             одновременно. А когда в поле
             внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны
             стресса».
             Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </div>
         <div>
-          <h4 class="section__title title-decor">Дофамин</h4>
+          <h3 class="section__title title-decor">Дофамин</h3>
           <p class="section__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности
             сосредоточиться замешана и
             полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём
@@ -79,10 +82,10 @@
     </section>
     <section class="section
 section__concentration">
-      <h3 class="section__main-title">Что снижает концентрацию внимания?</h3>
+      <h2 class="section__main-title">Что снижает концентрацию внимания?</h2>
       <div class="section__description section__description-concentration ">
         <div>
-          <h4 class="section__title title-decor">Многозадачность</h4>
+          <h3 class="section__title title-decor">Многозадачность</h3>
           <p class="section__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и
             резко меняющийся мир в
             целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать
@@ -90,7 +93,7 @@ section__concentration">
             выдержать, если не давать ей отдохнуть.</p>
         </div>
         <div>
-          <h4 class="section__title title-decor">Еда</h4>
+          <h3 class="section__title title-decor">Еда</h3>
           <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг
             энергию и помогают ему лучше
             работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные
@@ -100,7 +103,7 @@ section__concentration">
             быстрых углеводов.</p>
         </div>
         <div>
-          <h4 class="section__title title-decor">Гаджеты</h4>
+          <h3 class="section__title title-decor">Гаджеты</h3>
           <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст,
             а
             на компьютере фоном —
@@ -114,12 +117,12 @@ section__concentration">
       </div>
     </section>
     <section class="section section__advise">
-      <h3 class="section__main-title advice-main-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше
-        трёх секунд)</h3>
+      <h2 class="section__main-title advice-main-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше
+        трёх секунд)</h2>
       <div class="section__description section__description-advice ">
-        <h4 class="section__title-advice title-decor">5 простых (на самом деле не очень) советов</h4>
+        <h3 class="section__title-advice title-decor">5 простых (на самом деле не очень) советов</h3>
         <div>
-          <h5 class="section__subtitle title-decor">Представьте небо и облака</h5>
+          <h4 class="section__subtitle title-decor">Представьте небо и облака</h4>
           <p class="section__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь
             часто именно тревожные
             мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
@@ -129,7 +132,7 @@ section__concentration">
             волноваться о потенциальных проблемах из будущего.</p>
         </div>
         <div>
-          <h5 class="section__subtitle title-decor">Включите музыку</h5>
+          <h4 class="section__subtitle title-decor">Включите музыку</h4>
           <p class="section__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными
             эмоциями, которые тоже очень
             сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист
@@ -137,16 +140,17 @@ section__concentration">
             «белым шумом» или нейромузыкой.</p>
         </div>
         <div>
-          <h5 class="section__subtitle title-decor">Прогуляйтесь</h5>
+          <h4 class="section__subtitle title-decor">Прогуляйтесь</h4>
           <p class="section__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
-              href="">показал</a>, что
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+              target="_blank">показал</a>, что
             созерцание природы повышает
             концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить
             прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
             работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
         </div>
         <div>
-          <h5 class="section__subtitle title-decor">Хорошо ешьте</h5>
+          <h4 class="section__subtitle title-decor">Хорошо ешьте</h4>
           <p class="section__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
             резким скачкам сахара в
             крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый
@@ -154,7 +158,7 @@ section__concentration">
             хлеб из цельнозерновой пшеницы.</p>
         </div>
         <div>
-          <h5 class=" section__subtitle title-decor">Читайте</h5>
+          <h4 class=" section__subtitle title-decor">Читайте</h4>
           <p class="section__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
             соцсети, достаточно
             нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто
@@ -163,7 +167,7 @@ section__concentration">
       </div>
     </section>
     <section class="gallery">
-      <h4 class="gallery-title title-decor">А можно в картинках?</h4>
+      <h2 class="gallery-title title-decor">А можно в картинках?</h2>
       <div class="gallery-container">
         <img src="./images/sunset.png" alt="закат" loading="lazy" class="gallery-img gallery-img-sunset"><img
           src="./images/ice-cream.png" alt="мороженое" class="gallery-img gallery-img-ice-cream" loading="lazy"><img
