--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="section focus__section">
       <h2 class="section__main-title">Почему сосредоточиться так сложно</h2>
       <div class="section__description section__description-focus">
-        <div>
+        <div class="section__paragraph">
           <h3 class="section__title title-decor">Многозадачность</h3>
           <p class="section__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
             легендарная многозадачность,
@@ -67,7 +67,7 @@
             стресса».
             Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h3 class="section__title title-decor">Дофамин</h3>
           <p class="section__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности
             сосредоточиться замешана и
@@ -84,7 +84,7 @@
 section__concentration">
       <h2 class="section__main-title">Что снижает концентрацию внимания?</h2>
       <div class="section__description section__description-concentration ">
-        <div>
+        <div class="section__paragraph">
           <h3 class="section__title title-decor">Многозадачность</h3>
           <p class="section__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и
             резко меняющийся мир в
@@ -92,7 +92,7 @@ section__concentration">
             новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не
             выдержать, если не давать ей отдохнуть.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h3 class="section__title title-decor">Еда</h3>
           <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг
             энергию и помогают ему лучше
@@ -102,7 +102,7 @@ section__concentration">
             больше
             быстрых углеводов.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h3 class="section__title title-decor">Гаджеты</h3>
           <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст,
             а
@@ -121,7 +121,7 @@ section__concentration">
         трёх секунд)</h2>
       <div class="section__description section__description-advice ">
         <h3 class="section__title-advice title-decor">5 простых (на самом деле не очень) советов</h3>
-        <div>
+        <div class="section__paragraph">
           <h4 class="section__subtitle title-decor">Представьте небо и облака</h4>
           <p class="section__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь
             часто именно тревожные
@@ -131,7 +131,7 @@ section__concentration">
             будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
             волноваться о потенциальных проблемах из будущего.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h4 class="section__subtitle title-decor">Включите музыку</h4>
           <p class="section__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными
             эмоциями, которые тоже очень
@@ -139,7 +139,7 @@ section__concentration">
             с
             «белым шумом» или нейромузыкой.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h4 class="section__subtitle title-decor">Прогуляйтесь</h4>
           <p class="section__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
               href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
@@ -149,7 +149,7 @@ section__concentration">
             прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
             работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h4 class="section__subtitle title-decor">Хорошо ешьте</h4>
           <p class="section__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
             резким скачкам сахара в
@@ -157,7 +157,7 @@ section__concentration">
             рис,
             хлеб из цельнозерновой пшеницы.</p>
         </div>
-        <div>
+        <div class="section__paragraph">
           <h4 class=" section__subtitle title-decor">Читайте</h4>
           <p class="section__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
             соцсети, достаточно
